--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,7 @@
+[build]
+  command = "bundle exec jekyll build"
+  publish = "_site"
+
 [[plugins]]
   package = "netlify-plugin-password-protection"
 
