--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,3 @@
 [build]
-  command = "bundle exec jekyll build"
+  command = "bundle exec jekyll build && npx staticrypt _site/index.html $PROTECTED_PASSWORD -o _site/index.html"
   publish = "_site"
-
-[[plugins]]
-  package = "netlify-plugin-password-protection"
-
-  [plugins.inputs]
-    fileFilter = "**/*.html"
