fix command for password

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,6 @@
 [build]
-  command = "bundle exec jekyll build && echo $PROTECTED_PASSWORD | npx staticrypt _site/index.html -o _site/index.html --stdin"
+  command = '''
+  bundle exec jekyll build &&
+  npx staticrypt _site/index.html "$PROTECTED_PASSWORD" -o _site/index.html
+  '''
   publish = "_site"
