--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,33 +1,20 @@
 main:
   en:
-    - title: "of"
-      url: /of/
-      func: "About"
-    - title: "with"
-      url: /with/
-      func: "Collaborations"
+    - title: "by"
+      url: /by/
+    - title: "together"
+      url: /together/
     - title: "less"
       url: /less/
-      func: "Blog / Diary"
-    - title: "time"
-      url: /time/
-      func: "Contact"
     - title: "ment"
       url: /ment/
-      func: "Misc / Archive"
   he:
     - title: "של"
-      url: /of/
+      url: /by/
       func: "אודות"
     - title: "עם"
-      url: /with/
-      func: "שיתופי פעולה"
+      url: /together/
     - title: "חסר"
       url: /less/
-      func: "בלוג / יומן"
-    - title: "שעה"
-      url: /time/
-      func: "יצירת קשר"
     - title: "אחר"
       url: /ment/
-      func: "שונות / ארכיון"
